k8s-yaml/6-ingress/myserver.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  prs-dep
  namespace: default
  labels:
    app:  prs-dep
spec:
  selector:
    matchLabels:
      app: prs-server-c
  replicas: 3
  template:
    metadata:
      labels:
        app:  prs-server-c
    spec:
      containers:
      - name:  printreqpath
        image:  crpi-co509r5gdyecg5t2.cn-hangzhou.personal.cr.aliyuncs.com/lpruoyu/printreqpath:latest

---

apiVersion: v1
kind: Service
metadata:
  name: prs-svc
  namespace: default
spec:
  selector:
    app: prs-server-c
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 8080
