k8s-yaml/6-ingress/php-apache.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  php-dep
  namespace: default
  labels:
    app:  php-dep
spec:
  selector:
    matchLabels:
      app: php-apache
  replicas: 1
  template:
    metadata:
      labels:
        app:  php-apache
    spec:
      volumes:
      - name: content-vol
        emptyDir: {}
      containers:
      - name:  nginx
        image:  nginx
        volumeMounts: 
          - name: content-vol
            mountPath: /usr/share/nginx/html

---

apiVersion: v1
kind: Service
metadata:
  name: php-svc
  namespace: default
spec:
  selector:
    app: php-apache
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 80
    targetPort: 80
