k8s-yaml/6-ingress/ingress-default.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-default-r
  namespace: default
spec:
  defaultBackend: ## 默认规则
    service:
      name: php-svc
      port:
        number: 80
