k8s-yaml/6-ingress/ingress-limit-rps.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-222333
  namespace: default
  annotations:
    # 限速
    nginx.ingress.kubernetes.io/limit-rps: "1"
spec:
  defaultBackend: ## 只要未指定的映射路径
    service:
      name: prs-svc
      port:
        number: 80
  rules:
  - host: it666.com
    http:
      paths:
      - path: /abc # root@dep2-fc5f4447f-f6kk9:/# echo xxx > /usr/share/nginx/html/abc 
        pathType: Exact
        backend:
          service:
            name: svc2
            port:
              number: 80
