k8s-yaml/6-ingress/ingress-rewrite.yaml
# https://kubernetes.github.io/ingress-nginx/examples/rewrite/

apiVersion: networking.k8s.io/v1
kind: Ingress 
metadata:
  name: rewrite-path-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  rules:
  - host: it666.com 
    http:
      paths:
      - path: /api(/|$)(.*) 
        pathType: ImplementationSpecific
        backend: 
          service:
            name: prs-svc
            port:
              number: 80
