k8s-yaml/6-ingress/ingress-test.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#the-ingress-resource

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-222333
  namespace: default
spec:
  defaultBackend: ## 只要未指定的映射路径
    service:
      name: prs-svc
      port:
        number: 80
  rules:
  - host: it666.com
    http:
      paths:
      - path: /abc # root@dep2-fc5f4447f-f6kk9:/# echo xxx > /usr/share/nginx/html/abc 
        pathType: Exact
        backend:
          service:
            name: svc2
            port:
              number: 80
